--- a/src/App.scss
+++ b/src/App.scss
@@ -173,3 +173,10 @@ input::placeholder {
 .min-height-24 {
   max-height: 96px;
 }
+
+// .your-app {
+.rsis-image {
+  background-size: 90% !important;
+  background-position: center center;
+}
+// }
