--- a/src/App.scss
+++ b/src/App.scss
@@ -90,6 +90,11 @@ input::placeholder {
 .width-70-per {
   width: 70%;
 }
+
+.font8 {
+  font-size: 8px;
+}
+
 .font10 {
   font-size: 10px;
 }
@@ -285,3 +290,65 @@ input:focus {
   outline: none;
   border: none;
 }
+
+//
+
+.track-order {
+  // animation-name: example;
+  // animation-duration: 4s;
+  animation: example 0.2s ease-out;
+}
+
+@keyframes example {
+  0% {
+    height: 0px;
+  }
+  16% {
+    height: 30px;
+  }
+  32% {
+    height: 60px;
+  }
+  48% {
+    height: 90px;
+  }
+  64% {
+    height: 120px;
+  }
+  80% {
+    height: 150px;
+  }
+  // 100% {
+  //   height: 100%;
+  // }
+}
+
+.track-item {
+  animation: example 0.2s ease-out;
+}
+
+@keyframes example {
+  0% {
+    height: 0px;
+  }
+  16% {
+    height: 30px;
+  }
+  32% {
+    height: 60px;
+  }
+  48% {
+    height: 90px;
+  }
+  64% {
+    height: 120px;
+  }
+  80% {
+    height: 150px;
+  }
+  // 100% {
+  //   height: 100%;
+  // }
+}
+
+//
