--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -133,6 +133,12 @@
   overflow-y: scroll;
 }
 
+.scrollable-element-x {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-x: scroll;
+}
+
 .scrollable-element::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
