--- a/src/View/Pages/LoginPage/LoginPage.scss
+++ b/src/View/Pages/LoginPage/LoginPage.scss
@@ -1,14 +1,14 @@
 .pharm-box__login {
-	background-image: url('../../../../public/assets/images/login-bg.jpeg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	position: relative;
+  background-image: url("../../../../public/assets/images/login-bg.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  // background-position: center center;
+  position: relative;
 }
 
 .pharm-box__login-form {
-	position: absolute;
-	top: 60%;
-	left: 0;
-	width: 100%;
+  position: absolute;
+  top: 60%;
+  left: 0;
+  width: 100%;
 }
