--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,18 @@ body {
   color: #0a0a0a;
 }
 
+.scrollable-element-y {
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.scrollable-element-x {
+  height: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
 .background-primary {
   background-color: var(--primary-color);
 }
